@@ -124,7 +124,8 @@ static char const preferences_skeleton[] =
 "      <group id=\"exportarea\"/>\n"
 "      <group id=\"defaultxdpi\"/>\n"
 "    </group>\n"
-"    <group id=\"save_as\" default=\"modules.output.SVG.sodipodi\" append_extension=\"1\"/>\n"
+"    <group id=\"save_as\" default=\"modules.output.SVG.sodipodi\" append_extension=\"1\" path=\"\"/>\n"
+"    <group id=\"open\" path=\"\"/>\n"
 "  </group>\n"
 "  <group id=\"printing\">\n"
 "    <settings id=\"ps\"/>\n"
