@@ -1,3 +1,10 @@
+2004-08-18  Ted Gould  <ted@gould.cx>
+
+	* src/file.cpp, src/preferences-skeleton.h:
+
+	Adding the feature that the save and open directories are saved in the
+	preferences.  The last one will be used.
+
 2004-08-18  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/widgets/font-selector.cpp: uint -> guint to fix
